# kiro.rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  credentials.example.apikey.json  docker-compose.yml
.github/workflows/: docker-build.yml
admin-ui/: index.html  package.json  pnpm-lock.yaml
admin-ui/src/: App.tsx  index.css
admin-ui/src/api/: api-keys.ts  credentials.ts  error-logs.ts  model-coverage.ts  proxies.ts
admin-ui/src/components/: add-credential-dialog.tsx  admin-shell.tsx  bind-proxy-dialog.tsx  credential-card.tsx  data-table.tsx  global-config-dialog.tsx  import-proxy-dialog.tsx  import-token-json-dialog.tsx  login-page.tsx  rpm-sparkline.tsx  rpm-tuning-card.tsx  test-chat-dialog.tsx  usage-stats-dialog.tsx
admin-ui/src/components/ui/: table.tsx
admin-ui/src/hooks/: use-credentials.ts
admin-ui/src/lib/: admin-axios.ts  storage.ts
admin-ui/src/pages/: api-keys-page.tsx  credentials-page.tsx  error-logs-page.tsx  model-coverage-page.tsx  proxies-page.tsx  settings-page.tsx  stats-page.tsx
admin-ui/src/types/: api.ts
deploy/: docker-compose.yml
src/: api_key_manager.rs  http_client.rs  image.rs  main.rs  push.rs  test.rs  token.rs
src/admin/: handlers.rs  middleware.rs  router.rs  service.rs  types.rs
src/anthropic/: cache_tracker.rs  converter.rs  handlers.rs  middleware.rs  mod.rs  router.rs  stream.rs  types.rs  websearch.rs
src/kiro/: client_profile.rs  cooldown.rs  machine_id.rs  metrics.rs  mod.rs  provider.rs  proxy_pool.rs  proxy_rotation.rs  rate_limiter.rs  token_manager.rs  web_portal.rs
src/kiro/endpoint/: cli.rs  ide.rs  mod.rs
src/kiro/model/: credentials.rs  token_refresh.rs  usage_limits.rs
src/kiro/model/requests/: kiro.rs
src/model/: arg.rs  config.rs
src/storage/: migration.rs  mod.rs
