[package]
name = "kiro-rs"
version = "1.1.77"
edition = "2024"

[profile.release]
lto = "thin"
strip = true

[features]
# 默认启用 native-tls（vendored openssl）：让 TLS ClientHello 指纹更接近真实
# Kiro IDE 客户端（Electron + Node OpenSSL），降低被上游 JA3/JA4 风控的概率。
# 不能编 openssl 源码的环境可用 `--no-default-features` 关掉，此时只剩 rustls。
default = ["native-tls"]
native-tls = ["reqwest/native-tls-vendored"]
# 显式启用才允许打印潜在敏感信息（仅用于排障）
sensitive-logs = []

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "socks", "rustls-tls-webpki-roots", "rustls-tls-native-roots", "http2", "system-proxy", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"   # CBOR 编解码（Web Portal API）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"           # CRC32C 计算
bytes = "1"         # 高效的字节缓冲区
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # 高性能同步原语
subtle = "2.6"        # 常量时间比较（防止时序攻击）
rust-embed = "8"      # 嵌入静态文件
mime_guess = "2"      # MIME 类型推断
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }  # 图片处理
base64 = "0.22"       # Base64 编解码
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }   # 嵌入式 SQLite（含静态链接）
r2d2 = "0.8"          # SQLite 连接池
r2d2_sqlite = "0.25"  # r2d2 + rusqlite 适配
thiserror = "1"       # 自定义错误派生
